@@ -1,10 +1,12 @@
 package com.iwaconsolti.school.controller;
 
-import com.iwaconsolti.school.controller.response.CourseRequest;
+import com.iwaconsolti.school.controller.request.CourseRequest;
+import com.iwaconsolti.school.controller.response.CourseResponse;
 import com.iwaconsolti.school.model.Course;
-import com.iwaconsolti.school.service.SchoolService;
+import com.iwaconsolti.school.model.School;
+import com.iwaconsolti.school.service.CourseService;
+import com.iwaconsolti.school.service.SchoolHelperService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -13,65 +15,68 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/{schoolName}/courses")
+@RequestMapping("/{schoolName}/course")
 public class CourseController {
 
-    @Autowired
-    @Qualifier("gerardoService")
-    private SchoolService gerardoService;
+    private final CourseService courseService;
+    private final SchoolHelperService schoolHelperService;
 
     @Autowired
-    @Qualifier("zetService")
-    private SchoolService zetService;
-
-    private SchoolService getServiceBySchoolName(String schoolName) {
-        if ("GerardoInstitute".equalsIgnoreCase(schoolName)) {
-            return gerardoService;
-        } else if ("ZetCollege".equalsIgnoreCase(schoolName)) {
-            return zetService;
-        } else {
-            throw new IllegalArgumentException("Invalid school name: " + schoolName);
-        }
+    public CourseController(CourseService courseService, SchoolHelperService schoolHelperService) {
+        this.courseService = courseService;
+        this.schoolHelperService = schoolHelperService;
     }
 
-    private CourseRequest convertToCourseResponse(Course course) {
-        return new CourseRequest(course.getId(), course.getName(), course.getProfessorName());
+    private Course convertRequestToCourse(CourseRequest courseRequest, School school) {
+        return new Course(
+                courseRequest.getName(),
+                courseRequest.getProfessorName(),
+                school
+        );
     }
 
-    private Course convertToCourseRequest(CourseRequest courseRequest) {
-        return new Course(courseRequest.getId(), courseRequest.getName(), courseRequest.getProfessorName());
+    private CourseResponse convertCourseToResponse(Course course) {
+        return new CourseResponse(
+                course.getId(),
+                course.getName(),
+                course.getProfessorName()
+        );
     }
 
     @GetMapping
-    public List<CourseRequest> findAllCourses(@PathVariable String schoolName) {
-        List<Course> courses = getServiceBySchoolName(schoolName).findCourses();
-        return courses.stream()
-                .map(this::convertToCourseResponse)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<CourseResponse>> findAllCourses(@PathVariable String schoolName) {
+        School school = schoolHelperService.findSchool(schoolName);
+        List<CourseResponse> courseResponses = courseService
+                .findAllBySchoolId(school.getId())
+                .stream()
+                .map(this::convertCourseToResponse)
+                .toList();
+
+        return new ResponseEntity<>(courseResponses, HttpStatus.OK);
     }
 
     @PostMapping
-    public ResponseEntity<CourseRequest> createCourse(@PathVariable String schoolName, @RequestBody CourseRequest courseResponse) {
-        Course courseRequest = convertToCourseRequest(courseResponse);
-        Course createdCourse = getServiceBySchoolName(schoolName).createCourse(courseRequest);
+    public ResponseEntity<CourseResponse> createCourse(@PathVariable String schoolName,
+                                                       @RequestBody CourseRequest courseRequest) {
+        School school = schoolHelperService.findSchool(schoolName);
+        Course course = convertRequestToCourse(courseRequest, school);
+        course = courseService.createCourse(course);
+        CourseResponse courseResponse = convertCourseToResponse(course);
 
-        if (createdCourse != null) {
-            return ResponseEntity.status(HttpStatus.CREATED)
-                    .body(convertToCourseResponse(createdCourse));
-        } else {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null);
-        }
+        return new ResponseEntity<>(courseResponse, HttpStatus.CREATED);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<Void> editCourse(@PathVariable String schoolName, @PathVariable int id, @RequestBody CourseRequest updatedCourseRequest) {
-        Course updatedCourse = convertToCourseRequest(updatedCourseRequest);
-        boolean updated = getServiceBySchoolName(schoolName).updateCourse(id, updatedCourse);
+    public ResponseEntity<CourseResponse> updateCourse(
+            @PathVariable String schoolName,
+            @PathVariable int id,
+            @RequestBody CourseRequest courseRequest) {
 
-        if (updated) {
-            return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
-        } else {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
-        }
+        School school = schoolHelperService.findSchool(schoolName);
+        Course savedCourse = courseService.updateCourse(id, courseRequest, school.getId());
+        CourseResponse courseResponse = convertCourseToResponse(savedCourse);
+
+        return new ResponseEntity<>(courseResponse, HttpStatus.OK);
     }
+
 }
